Added create new project templates

--- a/src/org/unrealscriptsupport/UnrealScriptMutatorTemplateDescription.html
+++ b/src/org/unrealscriptsupport/UnrealScriptMutatorTemplateDescription.html
@@ -5,6 +5,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    Creates a Unreal Script mutator.
+    Creates an UnrealScript mutator.
   </body>
 </html>
