--- a/src/org/unrealscriptsupport/samples/lighttrigger/LightTriggerDescription.html
+++ b/src/org/unrealscriptsupport/samples/lighttrigger/LightTriggerDescription.html
@@ -7,11 +7,12 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        A light source which can be triggered on or off.
-
+        A light source which can be triggered on or off.<br/>
         This example illustrates a typical, simple UnrealScript class,
-        and it highlights the syntax and features of UnrealScript.
-
-        Source: http://udn.epicgames.com/Two/UnrealScriptReference.html#Example%20program%20structure
+        and it highlights the syntax and features of UnrealScript. <br/>
+        Source:
+        <a href="http://udn.epicgames.com/Two/UnrealScriptReference.html#Example%20program%20structure">
+            UDN - Two - Unreal Script Reference
+        </a>
     </body>
 </html>
